--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,16 @@ dependencies {
     implementation 'io.github.inflationx:viewpump:1.0.0'
     implementation 'com.airbnb.android:lottie:2.5.5'
 
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+
+    implementation "org.koin:koin-android:2.0.1"
+
 
 }
 apply plugin: 'com.google.gms.google-services'
